--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-svg-flagkit": "^0.9.5",
     "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
