--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/blur": "^3.6.0",
     "@react-native-community/datetimepicker": "^6.2.0",
     "@react-navigation/drawer": "^6.4.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-camera": "^4.2.1",
@@ -27,6 +30,7 @@
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-mask-input": "^1.2.0",
     "react-native-qrcode-mask": "^1.0.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-responsive-dimensions": "^3.1.1",
